Removing the pref check for client-lofi when in the blacklist experiment

This change removes the check for lofi_off that reflects historical opt
out preferences for server previews, but is no longer checked for server
previews.

Bug: 745250
Change-Id: I22fe6f6887aace8b37a7c9b5dfa5cb2cbee6a923
Reviewed-on: https://chromium-review.googlesource.com/585362
Reviewed-by: Charlie Harrison <csharrison@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Commit-Queue: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489753}
Former-commit-id: c7673aa794736e35e5cd1cff653117ea8409c007