components/data_reduction_proxy/core/browser/data_reduction_proxy_network_delegate.cc
@@ -336,7 +336,10 @@ void DataReductionProxyNetworkDelegate::OnBeforeStartTransactionInternal(
   if (data_reduction_proxy_io_data_->lofi_decider()) {
     data_reduction_proxy_io_data_->lofi_decider()
         ->MaybeSetAcceptTransformHeader(
-            *request, data_reduction_proxy_config_->lofi_off(), headers);
+            *request,
+            !params::IsBlackListEnabledForServerPreviews() &&
+                data_reduction_proxy_config_->lofi_off(),
+            headers);
   }
 
   MaybeAddChromeProxyECTHeader(headers, *request);
